installation of prettier and eslint for formatting

--- a/js-jest/package.json
+++ b/js-jest/package.json
@@ -16,6 +16,9 @@
     "refactor",
     "gilded-rose"
   ],
+  "plugins": [
+    "jest"
+  ],
   "license": "MIT",
   "private": true,
   "bugs": {
@@ -23,6 +26,10 @@
   },
   "homepage": "https://github.com/emilybache/GildedRose-Refactoring-Kata",
   "devDependencies": {
+    "eslint": "^8.41.0",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "eslint-plugin-jest": "^27.2.1"
   }
 }
